salesforce/generated/sunrun_ingest_api/desktop-mf/objects/desktop_mf_Fact_Inventory__dll/fields/InventoryID__c.field-meta.xml
<CustomField>
    <fullName>InventoryID__c</fullName>
    <label>InventoryID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>InventoryID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>